<resources>
    <string name="app_name">KelimeLER</string>
    <string name="statistic">İSTATİSTİKLER</string>
    <string name="statistic_previous">İSTATİSTİKLER (Bu oyun hariç)</string>
    <string name="helper_description1">Her tahmin kutu sayısı kadar olmalıdır. Göndermek için enter\'a basın.</string>
    <string name="helper_description2">Her tahminden sonra kutucukların renkleri tahmininizin yakınlığına göre değişecektir.</string>
    <string name="helper_description3"><b>Örnekler</b></string>
    <string name="helper_description4"><b>İ</b> harfi kelimede var ve doğru yerde.</string>
    <string name="helper_description5"><b>S</b> harfi kelimede var fakat yanlış yerde.</string>
    <string name="helper_description6"><b>R</b> harfi kelimede yok.</string>
    <string name="statistic_total_game">Toplam Oyun</string>
    <string name="statistic_ratio_win">% Kazanma</string>
    <string name="statistic_strike">Peş peşe Kazanma</string>
    <string name="statistic_max_strike">Maks Peş peşe Kazanma</string>
    <string name="statistic_five_letter_title">Beş Harfliler</string>
    <string name="statistic_six_letter_title">Altı Harfliler</string>
    <string name="statistic_seven_letter_title">Yedi Harfliler</string>
    <string name="statistic_four_letter_title">Dört Harfliler</string>
    <string name="statistic_eight_letter_title">Sekiz Harfliler</string>
    <string name="statistic_nine_letter_title">Dokuz Harfliler</string>
    <string name="given_letter_title"> HARFLERDEN BİR TANESİ</string>
    <string name="given_letter_no_letter_title">TÜM HARFLER BULUNMUŞ!</string>
    <string name="letter_counts_title">HARFLERDEN KAÇAR TANE VAR</string>
    <string name="watch_ads_earn_dimaond_title">REKLAM İZLE ve PUAN KAZAN</string>
    <string name="new_game">YENİ OYUN</string>
    <string name="finished_dialog_correct_word">DOĞRU KELİME: &lt;big>&lt;b&gt;%1$s&lt;/b&gt;&lt;/big></string>
    <string name="menu_6_letters">Altı harf oyununu peş peşe 10 kere kazanmanız gerekmektedir!</string>
    <string name="menu_7_letters">Yedi harf oyununu peş peşe 10 kere kazanmanız gerekmektedir!</string>
    <string name="menu_8_letters">Sekiz harf oyununu peş peşe 10 kere kazanmanız gerekmektedir!</string>
    <string name="menu_4_letters">Dört harf oyununu peş peşe 10 kere kazanmanız gerekmektedir!</string>
    <string name="menu_5_letters">Beş harf oyununu peş peşe 10 kere kazanmanız gerekmektedir!</string>

</resources>